--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<div class="col-sm-6" id="end">
 					<h2>Correct:<span id="correct"></span></h2>
 					<h2>Wrong:<span id="wrong"></span></h2>
+					<h2>Unanswered:<span id="unanswered"></span></h2>
 				</div>
 				<div class="col-sm-6" id="main">
 					<h2>Time Remaining: <span id="time">30</span></h2>
